--- a/tutorials/01_pstfrom.ipynb
+++ b/tutorials/01_pstfrom.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2025,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gmdsitut",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
