--- a/tutorials/01_pstfrom.ipynb
+++ b/tutorials/01_pstfrom.ipynb
@@ -883,20 +883,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for Ss\n",
+    "tag = \"sto_ss\"\n",
+    "files = [f for f in os.listdir(template_ws) if tag in f.lower() and f.endswith(\".txt\")]\n",
     "\n",
-    "# # for Ss\n",
-    "# tag = \"sto_ss\"\n",
-    "# files = [f for f in os.listdir(template_ws) if tag in f.lower() and f.endswith(\".txt\")]\n",
-    "# # only for layer 2 and 3; we aren't monsters\n",
-    "# for f in files[1:]: \n",
-    "#     add_mult_pars(f, lb=0.2, ub=5.0, ulb=1e-7, uub=1e-3)\n",
+    "tidy_array(files[0])\n",
+    "add_mult_pars(files[0], lb=0.2, ub=5.0, ulb=1e-7, uub=1e-1)\n",
     "\n",
-    "# # For Sy\n",
-    "# tag = \"sto_sy\"\n",
-    "# files = [f for f in os.listdir(template_ws) if tag in f.lower() and f.endswith(\".txt\")]\n",
-    "# # only for layer 1\n",
-    "# f = files[0]\n",
-    "# add_mult_pars(f, lb=0.2, ub=5.0, ulb=0.01, uub=0.4)\n",
+    "# For Sy\n",
+    "tag = \"sto_sy\"\n",
+    "files = [f for f in os.listdir(template_ws) if tag in f.lower() and f.endswith(\".txt\")]\n",
+    "tidy_array(files[0])\n",
+    "add_mult_pars(files[0], lb=0.2, ub=5.0, ulb=0.001, uub=0.4)\n",
     "\n"
    ]
   },
@@ -906,7 +904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# len([f for f in os.listdir(template_ws) if f.endswith(\".tpl\")])"
+    "[f for f in os.listdir(template_ws) if f.endswith(\".tpl\")]"
    ]
   },
   {
@@ -914,9 +912,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# [f for f in os.listdir(template_ws) if f.endswith(\".tpl\")]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -929,40 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Spatial and Temporal Correlation\n",
-    "\n",
-    "Now, you may be thinking \"shouldn't recharge have temporal correlation as well?\". \n",
-    "\n",
-    "Damn straight it should. Now, this requires a little trickery because native handling in spatiotemporal correlation is hard to do.  So what we are going to do is split this correlation into two setup of multiplier parameters.  One set of parameters will be constant in space but vary (and be correlated) in time.  The other set of multiplier parameters will be constant in time but vary (and be correlated) in space.  Since both of these sets of parameters are multipliers, we implicitly represent the concept that recharge is uncertain and correlated in both space and time.  Easy as!\n",
-    "\n",
-    "First we need to construct a container of stress period datetimes. (This relies on specifying the start_datetime argument when instantiating `PstFrom`.) These datetime values will specify the position of parameters on the time-axis.\n",
-    ".\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# build up a container of stress period start datetimes - this will\n",
-    "# be used to specify the datetime of each multiplier parameter\n",
-    "\n",
-    "dts = pd.to_datetime(start_datetime) + pd.to_timedelta(np.cumsum(sim.tdis.perioddata.array[\"perlen\"]),unit='d')\n",
-    "\n",
-    "dts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you use the same parameter group name (`pargp`) and same geostruct, `PstFrom` will treat parameters setup across different calls to `add_parameters()` as correlated - ***WARNING*** do not try to express spatial and temporal correlation together - as discussed above, #badtimes.  In this case, we want to express temporal correlation in the recharge multiplier parameters that are \"constant\" type in space so that there is one recharge multiplier parameter for each stress period that shares a parameter group name across different calls to `add_parameters`. So, we use the same parameter group names for each stress period data file, and specify the `datetime` and `geostruct` arguments.\n",
-    "\n",
-    "Including temporal correlation introduces an additional challenge. Interpolation between points that share a common coordinate creates all types of trouble. We are going to have many parameters during each stress period (a single point on the time-axis). To get around this challenge we need to be a bit sneaky.\n",
-    "\n",
-    "\n",
-    "First, we will apply the multiple *spatial* scales of parameter multipliers (`constant`, `pilot point` and `grid`) as we did for hydraulic properties.  We do this for all recharge files at once, which tells `PstFrom` to broadcast (e.g. share) the same parameters for all of those files: \n",
+    "One last set of parameters: recharge\n",
     "\n"
    ]
   },
@@ -1004,12 +967,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sp = [int(f.split(\".\")[1].split('_')[-1]) for f in files]\n",
-    "# d = {s:f for s,f in zip(sp,files)}\n",
-    "# sp.sort()\n",
-    "# files = [d[s] for s in sp]\n",
-    "# print(files)\n",
-    "# # the spatial multiplier parameters; just use the same function\n",
     "add_mult_pars(f, lb=0.2, ub=5.0, ulb=0, uub=1e-3, add_coarse=False)"
    ]
   },
@@ -1018,44 +975,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "len([f for f in os.listdir(template_ws) if f.endswith(\".tpl\")])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, we will assign an additional `constant` multiplier parameter for each recharge stress-period file (so, a single multiplier for all recharge parameters for each stress period). We will specify temporal correlation for these `constant` multipliers. These will all have the same parameter group name, as discussed above. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for f in files:   \n",
-    "#     # multiplier that includes temporal correlation\n",
-    "#     # get the stress period number from the file name\n",
-    "#     kper = int(f.split('.')[1].split('_')[-1]) - 1  \n",
-    "#     # add the constant parameters (with temporal correlation)\n",
-    "#     pf.add_parameters(filenames=f,\n",
-    "#                     zone_array=ib,\n",
-    "#                     par_type=\"constant\",\n",
-    "#                     par_name_base=f.split('.')[1]+\"tcn\",\n",
-    "#                     pargp=f.split('.')[1]+\"tcn\",\n",
-    "#                     lower_bound=0.5, upper_bound=1.5,\n",
-    "#                     ult_ubound=1e-3, ult_lbound=0,\n",
-    "#                     datetime=dts[kper], # this places the parameter value on the \"time axis\"\n",
-    "#                     geostruct=temporal_gs)"
+    "[f for f in os.listdir(template_ws) if f.endswith(\".tpl\")]"
    ]
   },
   {
@@ -1235,37 +1156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally, our favorite (not!) boundary-condition: SFR.\n",
-    "\n",
-    "Let's parameterize conductance (time-invariant) and inflow (time-variant)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Damn!  we just parameterized many recognized sources of model input uncertainty at several spatial and temporal scales.  And we expressed spatial and temporal correlation in those parameters.  One last set of parameters that we will need later for sequential data assimilation - initial conditions:"
+    "Damn!  we just parameterized many recognized sources of model input uncertainty at several spatial scales.  And we expressed spatial correlation in those parameters.  One last set of parameters that we will need later for sequential data assimilation - initial conditions:"
    ]
   },
   {
